Added muon matching for mvis calculation, fixed dy_max bug, adjusted some bins

--- a/scripts/test.ipynb
+++ b/scripts/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "e8af9afb",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "c41dc0f2",
    "metadata": {},
    "outputs": [
@@ -98,73 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7465dbee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_z_m_pt(df):\n",
-    "    #finds for each event the muon pair that fits best to the z boson mass. returns arrays with the mass and pt of the best fitting pair\n",
-    "    m_z = 91.1880\n",
-    "    m_vis = np.full(len(df), np.nan)\n",
-    "    pt_vis = np.full(len(df), np.nan)\n",
-    "    n_muon = get_nmuon(df, \"eta_\")\n",
-    "\n",
-    "    for n_event in range(len(df)):\n",
-    "        row = df.iloc[n_event]\n",
-    "        best_m_vis = -1.\n",
-    "        best_pt_vis = -1.\n",
-    "        for n1 in range(1, n_muon+1):\n",
-    "            for n2 in range(1, n_muon+1):\n",
-    "                m_temp = generate_m_vis(row[f\"pt_{n1}\"], row[f\"eta_{n1}\"], row[f\"phi_{n1}\"], row[f\"m_{n1}\"], row[f\"pt_{n2}\"], row[f\"eta_{n2}\"], row[f\"phi_{n2}\"], row[f\"m_{n2}\"])\n",
-    "                pt_temp = generate_pt_vis(row[f\"pt_{n1}\"], row[f\"eta_{n1}\"], row[f\"phi_{n1}\"], row[f\"m_{n1}\"], row[f\"pt_{n2}\"], row[f\"eta_{n2}\"], row[f\"phi_{n2}\"], row[f\"m_{n2}\"])\n",
-    "\n",
-    "                if abs(m_z-m_temp) < abs(m_z-best_m_vis):\n",
-    "                    best_m_vis = m_temp\n",
-    "                    best_pt_vis = pt_temp\n",
-    "\n",
-    "        if best_m_vis != -1.:\n",
-    "            m_vis[n_event] = best_m_vis\n",
-    "        if best_pt_vis != -1.:\n",
-    "            pt_vis[n_event] = best_pt_vis\n",
-    "    \n",
-    "    return m_vis, pt_vis\n",
-    "\n",
-    "\n",
-    "def get_nmuon(df, column):\n",
-    "    #returns the number of muons that is available in the dataset (the highest index that can be found behind the column base name)\n",
-    "    max_n = 0\n",
-    "    for col in df.columns:\n",
-    "        if col.startswith(column):\n",
-    "            n = col.rsplit(\"_\", 1)[1]\n",
-    "            n = int(n)\n",
-    "            if n > max_n:\n",
-    "                max_n = n\n",
-    "    return max_n\n",
-    "\n",
-    "def generate_m_vis(pt_1, eta_1, phi_1, m_1, pt_2, eta_2, phi_2, m_2):\n",
-    "    #calculates m_vis of a muon pair\n",
-    "    p4_1 = vector.MomentumObject4D(pt=pt_1, phi=phi_1, eta=eta_1, mass=m_1)\n",
-    "    p4_2 = vector.MomentumObject4D(pt=pt_2, phi=phi_2, eta=eta_2, mass=m_2)\n",
-    "    p4_vis = p4_1 + p4_2\n",
-    "    m_vis = p4_vis.m\n",
-    "\n",
-    "    return m_vis\n",
-    "\n",
-    "def generate_pt_vis(pt_1, eta_1, phi_1, m_1, pt_2, eta_2, phi_2, m_2):\n",
-    "    #calculates pt_vis of a muon pair\n",
-    "    p4_1 = vector.MomentumObject4D(pt=pt_1, phi=phi_1, eta=eta_1, mass=m_1)\n",
-    "    p4_2 = vector.MomentumObject4D(pt=pt_2, phi=phi_2, eta=eta_2, mass=m_2)\n",
-    "    p4_vis = p4_1 + p4_2\n",
-    "    pt_vis = p4_vis.pt\n",
-    "\n",
-    "    return pt_vis\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "abe5db92",
    "metadata": {},
    "outputs": [
@@ -172,19 +106,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(24951,)\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'numpy.float64' object does not support item assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m data_df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mm_vis\u001b[39m\u001b[38;5;124m\"\u001b[39m], data_df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpt_vis\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mget_z_m_pt\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata_df\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m emb_df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mm_vis\u001b[39m\u001b[38;5;124m\"\u001b[39m], emb_df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpt_vis\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m get_z_m_pt(emb_df)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAdded m_vis and pt_vis\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[13], line 23\u001b[0m, in \u001b[0;36mget_z_m_pt\u001b[0;34m(df)\u001b[0m\n\u001b[1;32m     20\u001b[0m             best_pt_vis \u001b[38;5;241m=\u001b[39m pt_vis\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m best_m_vis \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1.\u001b[39m:\n\u001b[0;32m---> 23\u001b[0m     \u001b[43mm_vis\u001b[49m\u001b[43m[\u001b[49m\u001b[43mn_event\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m best_m_vis\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m best_pt_vis \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1.\u001b[39m:\n\u001b[1;32m     25\u001b[0m     pt_vis[n_event] \u001b[38;5;241m=\u001b[39m best_pt_vis\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'numpy.float64' object does not support item assignment"
+      "Added m_vis and pt_vis\n"
      ]
     }
    ],
